--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "moment": "^2.30.1",
     "next": "13.4.2",
     "postcss": "8.4.23",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-clickout-handler": "^1.2.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
